Multiple Levels, Part 1

--- a/src/app/malaria-101/activity-3/activity-3.component.html
+++ b/src/app/malaria-101/activity-3/activity-3.component.html
@@ -28,3 +28,4 @@
     </div>
 </div>
 <button-nav [complete]="activityComplete" [completed]="completed" prevurl="/malaria-101/activity-2" nexturl="/meds-n-labels/activity-1"></button-nav>
+<app-level-navigate [levelInfo]="currStage"></app-level-navigate>
