--- a/src/app/malaria-101/activity-2/activity-2.component.html
+++ b/src/app/malaria-101/activity-2/activity-2.component.html
@@ -44,3 +44,4 @@
   </div>
 </div>
 <button-nav nexturl="/malaria-101/activity-3" prevurl="/malaria-101/activity-1-2" [completed]="completed" [complete]="activityComplete"></button-nav>
+<app-level-navigate [levelInfo]="currStage"></app-level-navigate>
