--- a/src/app/meds-n-labels/activity-2/activity-2.component.html
+++ b/src/app/meds-n-labels/activity-2/activity-2.component.html
@@ -7,8 +7,8 @@
     <div class="col-lg-6 col-md-offset-3">
         <table class="image-table">
             <tbody>
-                <tr *ngFor="let imgRows of createRange(4); let outerIdx = index">
-                    <td *ngFor="let imgs of createRange(4); let innerIdx = index;" (click)="isMatchArr[4*outerIdx+innerIdx] ? choose(4*outerIdx+innerIdx) : null" [id]="4*outerIdx+innerIdx">
+                <tr *ngFor="let imgRows of createRange(currentLevel.rowCount); let outerIdx = index">
+                    <td *ngFor="let imgs of createRange(currentLevel.columnCount); let innerIdx = index;" (click)="isMatchArr[2*outerIdx+innerIdx] ? choose(currentLevel.columnCount*outerIdx+innerIdx) : null" [id]="currentLevel.columnCount*outerIdx+innerIdx">
                         <img class="memory-imgs" src="{{backcard}}"/>
                     </td>
                 </tr>  
@@ -17,4 +17,4 @@
     </div>
 </div>
 <button-nav nexturl="/meds-n-labels/activity-3" prevurl="/meds-n-labels/activity-1" [completed]="completed" [complete]="activityComplete"></button-nav>
-
+<app-level-navigate [levelInfo]="currStage"></app-level-navigate>
